[package]
name = "xdg-mime"
description = "A library for loading and querying the XDG shared MIME database"
version = "0.2.0" # Keep in sync with html_root_url in src/lib.rs
authors = ["Emmanuele Bassi <ebassi@gnome.org>"]
edition = "2018"
repository = "https://github.com/ebassi/xdg-mime-rs"
documentation = "https://docs.rs/xdg_mime"
readme = "README.md"
keywords = ["linux", "mime", "xdg", "configuration"]
license = "Apache-2.0"
exclude = [".github/*", ".gitignore"]

[lib]
name = "xdg_mime"
path = "src/lib.rs"
#doctest = false

[dependencies]
dirs = "2.0"
glob = "0.3.0"
mime = "0.3"
nom = "^5"
unicase = "2.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]
